# model-diff-amplification-toy-models

./: .gitignore  README.md  pyproject.toml
.github/instructions/: vibe-research-python.instructions.md
notes/: auditing_plan.md  ideas.md
src/: exp_llama_models.py  runpod_setup.py  scratch.py  scratch_auditing_amp_samp.py  scratch_auditing_lvl_1.py
